# userspace

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs
.github/workflows/: oroboros-ci.yml
.kilo/: kilo.json
betanet/: Cargo.toml
betanet/src/: lib.rs
conductor/: TRACKS.md
conductor/tracks/channel-compile-fix_20260315/: plan.md
conductor/tracks/channel-noun-substrate_20260315/: plan.md
conductor/tracks/nio-spi-facades_20260315/: plan.md
conductor/tracks/son-mlir-compiler-stack_20260315/: plan.md
examples/: README.md  couch_example.rs.disabled  couchduckdb.rs  lsmr_cli.rs  lsmr_example.rs
literbike/: Cargo.toml
literbike/src/: lib.rs
scripts/: setup_mlir_environment.sh
src/: dsel.rs  handle.rs  lib.rs
src/concurrency/: cancel.rs  channel.rs  deferred.rs  dispatcher.rs  job.rs  launch.rs  mod.rs  scope.rs
src/concurrency/channels/: channel.rs  mod.rs
src/concurrency/tests/: context_elements.rs  dispatch_tests.rs  job_cancel_propagation.rs
src/database/: couch.rs  cursorimpl.txt  lsmr.rs  mod.rs
src/kernel/: densified_ops.rs  ebpf.rs  ebpf_mmap.rs  endgame_bypass.rs  io_uring.rs  kernel_capabilities.rs  knox_proxy.rs  mod.rs  nio.rs  posix_sockets.rs  syscall.rs  syscall_net.rs  tethering_bypass.rs
src/kernel/uring/: emulator.rs  mod.rs
src/network/: adapters.rs  channels.rs  mod.rs  protocols.rs
src/nio/: mod.rs
src/tensor/: core.rs  mlir.rs  mlir_sys.rs  mod.rs
structured-concurrency/: Cargo.toml
structured-concurrency/src/kernel/: mod.rs
tests/: job_cancel_propagation.rs  lsmr_recovery.rs  lsmr_tests.rs  lsmr_tombstone.rs
tests/concurrency/: job_tests.rs  scope_tests.rs
tools/couchduckdb/: Cargo.toml  README.md
tools/couchduckdb/src/: main.rs
tools/oroboros/: Cargo.toml  README.md
tools/oroboros/src/: api_client.rs  couch_client.rs  lib.rs  main.rs
tools/oroboros/tests/: integration.rs
