[package]
name = "userspace"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Userspace kernel emulation library with structured concurrency, io_uring, eBPF JIT, and network abstractions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/userspace"
keywords = ["userspace", "io-uring", "ebpf", "concurrency", "kernel"]
categories = ["asynchronous", "concurrency", "emulators", "os"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
pin-project-lite = "0.2"
tracing = "0.1"
libc = "0.2"
parking_lot = "0.12"
dashmap = "5.5"
bytemuck = "1.14"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
memmap2 = "0.9"
crossbeam-channel = "0.5"
atomic = "0.5"
bitvec = "1.0"
once_cell = "1.19"
serde_json = "1.0.143"
serde = "1.0.219"
notify = "8.2.0"
anyhow = "1.0.99"
serde_derive = "1.0.219"
# Bearer dependencies removed - code has been consolidated into this project
duckdb = { version = "0.9", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["concurrency"]
concurrency = []
kernel = []
kernel-ebpf = ["kernel"]
kernel-tensor = ["kernel-ebpf"]
network = []
tensor = []
full = ["concurrency", "kernel", "kernel-tensor", "network", "tensor", "database"]

# DSEL features
dsel = []
dsel-debug = ["dsel"]

# Database feature
database = []

[features]
duckdb = ["duckdb"]

# Bearer features removed - code consolidated
