[package]
name = "oroboros"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
notify = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mime_guess = "2.0"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
urlencoding = "2.1"

[dev-dependencies]
httptest = "0.7"
